@@ -1,25 +1,6 @@
 package org.folio.services.budget;
 
-import org.apache.commons.collections4.CollectionUtils;
-import org.folio.completablefuture.FolioVertxCompletableFuture;
-import org.folio.models.BudgetExpenseClassHolder;
-import org.folio.rest.core.RestClient;
-import org.folio.rest.core.models.RequestContext;
-import org.folio.rest.core.models.RequestEntry;
-import org.folio.rest.exception.HttpException;
-import org.folio.rest.jaxrs.model.BudgetExpenseClass;
-import org.folio.rest.jaxrs.model.BudgetExpenseClassCollection;
-import org.folio.rest.jaxrs.model.SharedBudget;
-import org.folio.rest.jaxrs.model.StatusExpenseClass;
-import org.folio.services.transactions.CommonTransactionService;
-
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.List;
-import java.util.Map;
-import java.util.concurrent.CompletableFuture;
-import java.util.stream.Collectors;
-
+import static io.vertx.core.Future.succeededFuture;
 import static java.lang.Integer.MAX_VALUE;
 import static java.util.function.UnaryOperator.identity;
 import static java.util.stream.Collectors.toList;
@@ -31,41 +12,67 @@ import static org.folio.rest.util.ErrorCodes.TRANSACTION_IS_PRESENT_BUDGET_EXPEN
 import static org.folio.rest.util.HelperUtils.collectResultsOnSuccess;
 import static org.folio.rest.util.HelperUtils.convertIdsToCqlQuery;
 import static org.folio.rest.util.ResourcePathResolver.BUDGET_EXPENSE_CLASSES;
+import static org.folio.rest.util.ResourcePathResolver.resourceByIdPath;
 import static org.folio.rest.util.ResourcePathResolver.resourcesPath;
 
-public class BudgetExpenseClassService {
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
 
-  private final RestClient budgetExpenseClassRestClient;
+import org.apache.commons.collections4.CollectionUtils;
+import org.folio.models.BudgetExpenseClassHolder;
+import org.folio.okapi.common.GenericCompositeFuture;
+import org.folio.rest.core.RestClient;
+import org.folio.rest.core.models.RequestContext;
+import org.folio.rest.core.models.RequestEntry;
+import org.folio.rest.exception.HttpException;
+import org.folio.rest.jaxrs.model.BudgetExpenseClass;
+import org.folio.rest.jaxrs.model.BudgetExpenseClassCollection;
+import org.folio.rest.jaxrs.model.SharedBudget;
+import org.folio.rest.jaxrs.model.StatusExpenseClass;
+import org.folio.services.transactions.CommonTransactionService;
+
+import io.vertx.core.Future;
+
+public class BudgetExpenseClassService{
+
+  private final RestClient restClient;
   private final CommonTransactionService transactionService;
 
-  public BudgetExpenseClassService(RestClient budgetExpenseClassRestClient, CommonTransactionService transactionService) {
-    this.budgetExpenseClassRestClient = budgetExpenseClassRestClient;
+  public BudgetExpenseClassService(RestClient restClient, CommonTransactionService transactionService) {
+    this.restClient = restClient;
     this.transactionService = transactionService;
   }
 
-  public CompletableFuture<List<BudgetExpenseClass>> getBudgetExpenseClasses(String budgetId, RequestContext requestContext) {
+  public Future<List<BudgetExpenseClass>> getBudgetExpenseClasses(String budgetId, RequestContext requestContext) {
     String query = String.format("budgetId==%s", budgetId);
-    return budgetExpenseClassRestClient.get(query, 0, MAX_VALUE, requestContext, BudgetExpenseClassCollection.class)
-      .thenApply(BudgetExpenseClassCollection::getBudgetExpenseClasses);
+    var requestEntry = new RequestEntry(resourcesPath(BUDGET_EXPENSE_CLASSES))
+      .withQuery(query)
+      .withLimit(MAX_VALUE)
+      .withOffset(0);
+    return restClient.get(requestEntry.buildEndpoint(), BudgetExpenseClassCollection.class, requestContext)
+      .map(BudgetExpenseClassCollection::getBudgetExpenseClasses);
   }
 
-  public CompletableFuture<Void> createBudgetExpenseClasses(SharedBudget sharedBudget, RequestContext requestContext) {
+  public Future<Void> createBudgetExpenseClasses(SharedBudget sharedBudget, RequestContext requestContext) {
     if (!CollectionUtils.isEmpty(sharedBudget.getStatusExpenseClasses())) {
       List<BudgetExpenseClass> createList = sharedBudget.getStatusExpenseClasses().stream()
         .map(statusExpenseClass -> buildBudgetExpenseClass(statusExpenseClass, sharedBudget.getId()))
         .collect(Collectors.toList());
       return createBudgetExpenseClasses(createList, requestContext);
     }
-    return CompletableFuture.completedFuture(null);
+    return succeededFuture(null);
   }
 
-  public CompletableFuture<Void> updateBudgetExpenseClassesLinks(SharedBudget sharedBudget, RequestContext requestContext) {
+  public Future<Void> updateBudgetExpenseClassesLinks(SharedBudget sharedBudget, RequestContext requestContext) {
 
     return getBudgetExpenseClasses(sharedBudget.getId(), requestContext)
-      .thenApply(budgetExpenseClasses -> mapBudgetExpenseClassesByOperation(budgetExpenseClasses, sharedBudget))
-      .thenCompose(budgetExpenseClassHolder -> createBudgetExpenseClasses(budgetExpenseClassHolder.getCreateList(), requestContext)
-        .thenCompose(aVoid -> updateBudgetExpenseClasses(budgetExpenseClassHolder.getUpdateList(), requestContext))
-        .thenCompose(aVoid -> deleteBudgetExpenseClasses(budgetExpenseClassHolder.getDeleteList(), sharedBudget, requestContext)));
+      .map(budgetExpenseClasses -> mapBudgetExpenseClassesByOperation(budgetExpenseClasses, sharedBudget))
+      .compose(budgetExpenseClassHolder -> createBudgetExpenseClasses(budgetExpenseClassHolder.getCreateList(), requestContext)
+        .compose(aVoid -> updateBudgetExpenseClasses(budgetExpenseClassHolder.getUpdateList(), requestContext))
+        .compose(aVoid -> deleteBudgetExpenseClasses(budgetExpenseClassHolder.getDeleteList(), sharedBudget, requestContext)));
   }
 
   private BudgetExpenseClassHolder mapBudgetExpenseClassesByOperation(List<BudgetExpenseClass> budgetExpenseClasses, SharedBudget sharedBudget) {
@@ -91,41 +98,46 @@ public class BudgetExpenseClassService {
     return holder;
   }
 
-  private CompletableFuture<Void> deleteBudgetExpenseClasses(List<BudgetExpenseClass> deleteList, SharedBudget budget, RequestContext requestContext) {
+  private Future<Void> deleteBudgetExpenseClasses(List<BudgetExpenseClass> deleteList, SharedBudget budget, RequestContext requestContext) {
     if (deleteList.isEmpty()) {
-      return CompletableFuture.completedFuture(null);
+      return succeededFuture(null);
     }
     return checkNoTransactionsAssigned(deleteList, budget, requestContext)
-      .thenCompose(vVoid -> FolioVertxCompletableFuture.allOf(requestContext.getContext(), deleteList.stream()
-        .map(budgetExpenseClass -> budgetExpenseClassRestClient.delete(budgetExpenseClass.getId(), requestContext))
-        .toArray(CompletableFuture[]::new)));
+      .compose(v -> GenericCompositeFuture.all(deleteList.stream()
+        .map(budgetExpenseClass -> restClient.delete(resourceByIdPath(BUDGET_EXPENSE_CLASSES, budgetExpenseClass.getId()), requestContext))
+        .collect(Collectors.toList())))
+      .mapEmpty();
   }
 
-  private CompletableFuture<Void> checkNoTransactionsAssigned(List<BudgetExpenseClass> deleteList, SharedBudget budget, RequestContext requestContext) {
+  private Future<Void> checkNoTransactionsAssigned(List<BudgetExpenseClass> deleteList, SharedBudget budget, RequestContext requestContext) {
     return transactionService.retrieveTransactions(deleteList, budget, requestContext)
-      .thenAccept(transactions -> {
+      .map(transactions -> {
         if (isNotEmpty(transactions)) {
           throw new HttpException(400, TRANSACTION_IS_PRESENT_BUDGET_EXPENSE_CLASS_DELETE_ERROR);
         }
+        return null;
       });
   }
 
-  private CompletableFuture<Void> updateBudgetExpenseClasses(List<BudgetExpenseClass> updateList, RequestContext requestContext) {
+  private Future<Void> updateBudgetExpenseClasses(List<BudgetExpenseClass> updateList, RequestContext requestContext) {
     if (updateList.isEmpty()) {
-      return CompletableFuture.completedFuture(null);
+      return succeededFuture(null);
     }
-    return FolioVertxCompletableFuture.allOf(requestContext.getContext(), updateList.stream()
-      .map(budgetExpenseClass -> budgetExpenseClassRestClient.put(budgetExpenseClass.getId(), budgetExpenseClass, requestContext))
-      .toArray(CompletableFuture[]::new));
+    return GenericCompositeFuture.all(updateList.stream()
+      .map(budgetExpenseClass -> restClient.put(resourceByIdPath(BUDGET_EXPENSE_CLASSES, budgetExpenseClass.getId()), budgetExpenseClass, requestContext))
+      .collect(Collectors.toList()))
+      .mapEmpty();
   }
 
-  private CompletableFuture<Void> createBudgetExpenseClasses(List<BudgetExpenseClass> createList, RequestContext requestContext) {
+  private Future<Void> createBudgetExpenseClasses(List<BudgetExpenseClass> createList, RequestContext requestContext) {
     if (createList.isEmpty()) {
-      return CompletableFuture.completedFuture(null);
+      return succeededFuture(null);
     }
-    return FolioVertxCompletableFuture.allOf(requestContext.getContext(), createList.stream()
-      .map(budgetExpenseClass -> budgetExpenseClassRestClient.post(budgetExpenseClass, requestContext, BudgetExpenseClass.class))
-      .toArray(CompletableFuture[]::new));
+    var futures = createList.stream()
+      .map(budgetExpenseClass -> restClient.post(resourcesPath(BUDGET_EXPENSE_CLASSES), budgetExpenseClass, BudgetExpenseClass.class, requestContext))
+      .collect(Collectors.toList());
+    return GenericCompositeFuture.join(futures)
+      .mapEmpty();
   }
 
   private boolean isDifferentStatuses(StatusExpenseClass statusExpenseClass, BudgetExpenseClass budgetExpenseClass) {
@@ -139,22 +151,21 @@ public class BudgetExpenseClassService {
       .withStatus(BudgetExpenseClass.Status.fromValue(statusExpenseClass.getStatus().value()));
   }
 
-  public CompletableFuture<List<BudgetExpenseClass>> getBudgetExpensesClass(List<String> budgetsIds, RequestContext requestContext) {
-    return collectResultsOnSuccess(
-      ofSubLists(new ArrayList<>(budgetsIds), MAX_IDS_FOR_GET_RQ).map(ids -> getBudgetExpensesClassByIds(ids, requestContext))
-        .toList()).thenApply(
-      lists -> lists.stream()
+  public Future<List<BudgetExpenseClass>> getBudgetExpenseClasses(List<String> budgetsIds, RequestContext requestContext) {
+    return collectResultsOnSuccess(ofSubLists(new ArrayList<>(budgetsIds), MAX_IDS_FOR_GET_RQ).map(ids -> getBudgetExpenseClassesByIds(ids, requestContext)).collect(Collectors.toList()))
+      .map(lists -> lists.stream()
         .flatMap(Collection::stream)
         .collect(toList()));
   }
 
-  public  CompletableFuture<List<BudgetExpenseClass>> getBudgetExpensesClassByIds(List<String> ids, RequestContext requestContext) {
+  public  Future<List<BudgetExpenseClass>> getBudgetExpenseClassesByIds(List<String> ids, RequestContext requestContext) {
     String budgetId = "budgetId";
     String query = convertIdsToCqlQuery(ids, budgetId);
-    RequestEntry requestEntry = new RequestEntry(resourcesPath(BUDGET_EXPENSE_CLASSES)).withQuery(query)
+    var requestEntry = new RequestEntry(resourcesPath(BUDGET_EXPENSE_CLASSES))
+      .withQuery(query)
       .withOffset(0)
       .withLimit(MAX_IDS_FOR_GET_RQ);
-    return budgetExpenseClassRestClient.get(requestEntry, requestContext, BudgetExpenseClassCollection.class)
-      .thenApply(BudgetExpenseClassCollection::getBudgetExpenseClasses);
+    return restClient.get(requestEntry.buildEndpoint(), BudgetExpenseClassCollection.class, requestContext)
+      .map(BudgetExpenseClassCollection::getBudgetExpenseClasses);
   }
 }
