@@ -1,6 +1,25 @@
 package org.folio.services.fund;
 
-import io.vertx.core.impl.EventLoopContext;
+import static io.vertx.core.Future.succeededFuture;
+import static org.folio.rest.RestConstants.OKAPI_URL;
+import static org.folio.rest.util.TestConfig.mockPort;
+import static org.folio.rest.util.TestConstants.X_OKAPI_TENANT;
+import static org.folio.rest.util.TestConstants.X_OKAPI_TOKEN;
+import static org.folio.rest.util.TestConstants.X_OKAPI_USER_ID;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.when;
+
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.UUID;
+
 import org.apache.commons.lang.StringUtils;
 import org.folio.rest.core.models.RequestContext;
 import org.folio.rest.jaxrs.model.Budget;
@@ -9,7 +28,6 @@ import org.folio.rest.jaxrs.model.BudgetsCollection;
 import org.folio.rest.jaxrs.model.ExpenseClass;
 import org.folio.rest.jaxrs.model.FiscalYear;
 import org.folio.rest.jaxrs.model.Fund;
-import org.folio.rest.jaxrs.model.FundCodeExpenseClassesCollection;
 import org.folio.rest.jaxrs.model.Ledger;
 import org.folio.rest.jaxrs.model.LedgersCollection;
 import org.folio.services.ExpenseClassService;
@@ -20,29 +38,16 @@ import org.folio.services.ledger.LedgerDetailsService;
 import org.folio.services.ledger.LedgerService;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.UUID;
-import java.util.concurrent.CompletableFuture;
+import io.vertx.core.impl.EventLoopContext;
+import io.vertx.junit5.VertxExtension;
+import io.vertx.junit5.VertxTestContext;
 
-import static org.folio.rest.RestConstants.OKAPI_URL;
-import static org.folio.rest.util.TestConfig.mockPort;
-import static org.folio.rest.util.TestConstants.X_OKAPI_TENANT;
-import static org.folio.rest.util.TestConstants.X_OKAPI_TOKEN;
-import static org.folio.rest.util.TestConstants.X_OKAPI_USER_ID;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyString;
-import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.Mockito.when;
-
+@ExtendWith(VertxExtension.class)
 public class FundCodeExpenseClassesServiceTest {
 
   @InjectMocks
@@ -85,7 +90,7 @@ public class FundCodeExpenseClassesServiceTest {
   }
 
   @Test
-  public void shouldRetrieveCombinationFundCodeExpClassesWithFiscalYear() {
+  public void shouldRetrieveCombinationFundCodeExpClassesWithFiscalYear(VertxTestContext vertxTestContext) {
 
     String fiscalYearCode = "FY2021";
     String fiscalYearId = "684b5dc5-92f6-4db7-b996-b549d88f5e4e";
@@ -96,7 +101,7 @@ public class FundCodeExpenseClassesServiceTest {
       .withName("Fiscal Year 2021")
       .withSeries("FY");
     when(fiscalYearService.getFiscalYearByFiscalYearCode(eq(fiscalYearCode), eq(requestContext)))
-      .thenReturn(CompletableFuture.completedFuture(fiscalYear));
+      .thenReturn(succeededFuture(fiscalYear));
 
     String fundId1 = "69640328-788e-43fc-9c3c-af39e243f3b7";
     String fundId2 = "bbd4a5e1-c9f3-44b9-bfdf-d184e04f0ba0";
@@ -144,7 +149,7 @@ public class FundCodeExpenseClassesServiceTest {
     budgetCollection.setBudgets(Arrays.asList(budget1, budget2));
 
     when(budgetService.getBudgets(anyString(), eq(0), eq(Integer.MAX_VALUE),
-      eq(requestContext))).thenReturn(CompletableFuture.completedFuture(budgetCollection));
+      eq(requestContext))).thenReturn(succeededFuture(budgetCollection));
 
     String ledgerId1 = "65cb2bf0-d4c2-4886-8ad0-b76f1ba75d61";
     String ledgerId2 = "65cb2bf0-d4c2-4886-8ad0-b76f1ba75d63";
@@ -167,7 +172,7 @@ public class FundCodeExpenseClassesServiceTest {
       .withId(fundId2);
 
     List<Fund> funds = Arrays.asList(fund1, fund2);
-    when(fundService.getFunds(any(), eq(requestContext))).thenReturn(CompletableFuture.completedFuture(funds));
+    when(fundService.getFunds(any(), eq(requestContext))).thenReturn(succeededFuture(funds));
 
     Ledger ledger1 = new Ledger()
       .withLedgerStatus(Ledger.LedgerStatus.ACTIVE)
@@ -186,16 +191,13 @@ public class FundCodeExpenseClassesServiceTest {
       .withCurrency("USD");
 
     List<Ledger> ledgers = Arrays.asList(ledger1, ledger2);
-    List<String> ledgerIds = new ArrayList();
-    ledgerIds.add(ledgerId1);
-    ledgerIds.add(ledgerId2);
 
-    when(ledgerService.getLedgers(any(), eq(requestContext))).thenReturn(CompletableFuture.completedFuture(ledgers));
+    when(ledgerService.getLedgers(any(), eq(requestContext))).thenReturn(succeededFuture(ledgers));
 
     LedgersCollection ledgerCollection = new LedgersCollection();
     ledgerCollection.setLedgers(ledgers);
     when(ledgerService.retrieveLedgers(eq(StringUtils.EMPTY), eq(0), eq(Integer.MAX_VALUE), eq(requestContext)))
-      .thenReturn(CompletableFuture.completedFuture(ledgerCollection));
+      .thenReturn(succeededFuture(ledgerCollection));
 
     String expenseClassId1 = "1bcc3247-99bf-4dca-9b0f-7bc51a2998c2";
     String expenseClassId2 = "1bcc3247-99bf-4dca-9b0f-7bc51a2998c3";
@@ -213,7 +215,7 @@ public class FundCodeExpenseClassesServiceTest {
 
     List<ExpenseClass> expenseClassList = Arrays.asList(expenseClass1, expenseClass2);
     List<String> budgetIds = Arrays.asList(budget1.getId(), budget2.getId());
-    when(expenseClassService.getExpenseClassesByBudgetIds(eq(budgetIds), eq(requestContext))).thenReturn(CompletableFuture.completedFuture(expenseClassList));
+    when(expenseClassService.getExpenseClassesByBudgetIds(eq(budgetIds), eq(requestContext))).thenReturn(succeededFuture(expenseClassList));
 
     String budgetExpenseClassId1 = "9e662186-7d3e-4832-baaa-93967ccc597e";
     String budgetExpenseClassId2 = "9e662186-7d3e-4733-baaa-93967ccc597e";
@@ -230,25 +232,30 @@ public class FundCodeExpenseClassesServiceTest {
       .withStatus(BudgetExpenseClass.Status.ACTIVE);
 
     List<BudgetExpenseClass> budgetExpenseClassList = new ArrayList(Arrays.asList(budgetExpenseClass1, budgetExpenseClass2));
-    when(budgetExpenseClassService.getBudgetExpensesClass(eq(budgetIds), eq(requestContext)))
-      .thenReturn(CompletableFuture.completedFuture(budgetExpenseClassList));
+    when(budgetExpenseClassService.getBudgetExpenseClasses(eq(budgetIds), eq(requestContext)))
+      .thenReturn(succeededFuture(budgetExpenseClassList));
 
     when(ledgerDetailsService.getCurrentFiscalYear(eq(ledgerId1), eq(requestContext)))
-      .thenReturn(CompletableFuture.completedFuture(fiscalYear));
+      .thenReturn(succeededFuture(fiscalYear));
 
-    FundCodeExpenseClassesCollection fundCodeExpenseClassesCollectionReceived = new FundCodeExpenseClassesCollection();
+    var future = fundCodeExpenseClassesService.retrieveCombinationFundCodeExpClasses("FY2021", requestContext);
 
-    fundCodeExpenseClassesCollectionReceived = fundCodeExpenseClassesService.retrieveCombinationFundCodeExpClasses("FY2021", requestContext).join();
+    vertxTestContext.assertComplete(future)
+      .onComplete(result -> {
+        assertTrue(result.succeeded());
 
-    assertEquals("ENDOW-SUBN", fundCodeExpenseClassesCollectionReceived.getFundCodeVsExpClassesTypes().get(0).getFundCode());
-    assertEquals("ONETIME", fundCodeExpenseClassesCollectionReceived.getFundCodeVsExpClassesTypes().get(0).getLedgerCode());
-    assertEquals(":", fundCodeExpenseClassesCollectionReceived.getDelimiter());
-    assertEquals("ENDOW-SUBN:Elec", fundCodeExpenseClassesCollectionReceived.getFundCodeVsExpClassesTypes()
-      .get(0).getActiveFundCodeVsExpClasses().get(0));
+        var fundCodeExpenseClassesCollectionReceived = result.result();
+        assertEquals("ENDOW-SUBN", fundCodeExpenseClassesCollectionReceived.getFundCodeVsExpClassesTypes().get(0).getFundCode());
+        assertEquals("ONETIME", fundCodeExpenseClassesCollectionReceived.getFundCodeVsExpClassesTypes().get(0).getLedgerCode());
+        assertEquals(":", fundCodeExpenseClassesCollectionReceived.getDelimiter());
+        assertEquals("ENDOW-SUBN:Elec", fundCodeExpenseClassesCollectionReceived.getFundCodeVsExpClassesTypes().get(0).getActiveFundCodeVsExpClasses().get(0));
+        vertxTestContext.completeNow();
+      });
+
   }
 
   @Test
-  public void shouldRetrieveCombinationFundCodeExpClassesWithoutFiscalYear() {
+  public void shouldRetrieveCombinationFundCodeExpClassesWithoutFiscalYear(VertxTestContext vertxTestContext) {
 
     String ledgerId1 = "65cb2bf0-d4c2-4886-8ad0-b76f1ba75d61";
     String ledgerId2 = "65cb2bf0-d4c2-4886-8ad0-b76f1ba75d63";
@@ -271,14 +278,11 @@ public class FundCodeExpenseClassesServiceTest {
       .withCurrency("USD");
 
     List<Ledger> ledgers = Arrays.asList(ledger1, ledger2);
-    List<String> ledgerIds = new ArrayList();
-    ledgerIds.add(ledgerId1);
-    ledgerIds.add(ledgerId2);
     LedgersCollection ledgersCollection = new LedgersCollection();
     ledgersCollection.setLedgers(ledgers);
 
     when(ledgerService.retrieveLedgers(any(), eq(0), eq(Integer.MAX_VALUE), eq(requestContext)))
-      .thenReturn(CompletableFuture.completedFuture(ledgersCollection));
+      .thenReturn(succeededFuture(ledgersCollection));
 
     String fiscalYearCode = "FY2021";
     FiscalYear fiscalYear = new FiscalYear()
@@ -286,10 +290,10 @@ public class FundCodeExpenseClassesServiceTest {
       .withCode(fiscalYearCode)
       .withName("Fiscal Year 2021")
       .withSeries("FY");
-    when(ledgerDetailsService.getCurrentFiscalYear(any(), eq(requestContext))).thenReturn(CompletableFuture.completedFuture(fiscalYear));
+    when(ledgerDetailsService.getCurrentFiscalYear(any(), eq(requestContext))).thenReturn(succeededFuture(fiscalYear));
 
     when(fiscalYearService.getFiscalYearByFiscalYearCode(eq(fiscalYearCode), eq(requestContext)))
-      .thenReturn(CompletableFuture.completedFuture(fiscalYear));
+      .thenReturn(succeededFuture(fiscalYear));
 
     String fundId1 = "69640328-788e-43fc-9c3c-af39e243f3b7";
     String fundId2 = "bbd4a5e1-c9f3-44b9-bfdf-d184e04f0ba0";
@@ -312,12 +316,12 @@ public class FundCodeExpenseClassesServiceTest {
       .withId(fundId2);
 
     List<Fund> funds = Arrays.asList(fund1, fund2);
-    when(fundService.getFunds(any(), eq(requestContext))).thenReturn(CompletableFuture.completedFuture(funds));
+    when(fundService.getFunds(any(), eq(requestContext))).thenReturn(succeededFuture(funds));
 
-    when(ledgerService.getLedgers(any(), eq(requestContext))).thenReturn(CompletableFuture.completedFuture(ledgers));
+    when(ledgerService.getLedgers(any(), eq(requestContext))).thenReturn(succeededFuture(ledgers));
 
     when(fiscalYearService.getFiscalYearByFiscalYearCode(eq(fiscalYearCode), eq(requestContext)))
-      .thenReturn(CompletableFuture.completedFuture(fiscalYear));
+      .thenReturn(succeededFuture(fiscalYear));
 
     String expenseClassId1 = "1bcc3247-99bf-4dca-9b0f-7bc51a2998c2";
     String expenseClassId2 = "1bcc3247-99bf-4dca-9b0f-7bc51a2998c3";
@@ -380,13 +384,13 @@ public class FundCodeExpenseClassesServiceTest {
       .withExpenseClassId(expenseClassId2)
       .withStatus(BudgetExpenseClass.Status.ACTIVE);
 
-    List<BudgetExpenseClass> budgetExpenseClassList = new ArrayList(Arrays.asList(budgetExpenseClass1, budgetExpenseClass2));
+    List<BudgetExpenseClass> budgetExpenseClassList = List.of(budgetExpenseClass1, budgetExpenseClass2);
 
     when(budgetService.getBudgets(anyString(), eq(0), eq(Integer.MAX_VALUE),
-      eq(requestContext))).thenReturn(CompletableFuture.completedFuture(budgetCollection));
+      eq(requestContext))).thenReturn(succeededFuture(budgetCollection));
 
-    when(budgetExpenseClassService.getBudgetExpensesClass(eq(budgetIds), eq(requestContext)))
-      .thenReturn(CompletableFuture.completedFuture(budgetExpenseClassList));
+    when(budgetExpenseClassService.getBudgetExpenseClasses(eq(budgetIds), eq(requestContext)))
+      .thenReturn(succeededFuture(budgetExpenseClassList));
 
     ExpenseClass expenseClass1 = new ExpenseClass()
       .withCode("Elec")
@@ -402,15 +406,21 @@ public class FundCodeExpenseClassesServiceTest {
 
     List<ExpenseClass> expenseClassList = Arrays.asList(expenseClass1, expenseClass2);
     when(expenseClassService.getExpenseClassesByBudgetIds(eq(budgetIds), eq(requestContext)))
-      .thenReturn(CompletableFuture.completedFuture(expenseClassList));
-    FundCodeExpenseClassesCollection fundCodeExpenseClassesCollectionReceived;
+      .thenReturn(succeededFuture(expenseClassList));
 
-    fundCodeExpenseClassesCollectionReceived = fundCodeExpenseClassesService.retrieveCombinationFundCodeExpClasses(null, requestContext).join();
+    var future = fundCodeExpenseClassesService.retrieveCombinationFundCodeExpClasses(null, requestContext);
 
-    assertEquals("ENDOW-SUBN", fundCodeExpenseClassesCollectionReceived.getFundCodeVsExpClassesTypes().get(0).getFundCode());
-    assertEquals("ONETIME", fundCodeExpenseClassesCollectionReceived.getFundCodeVsExpClassesTypes().get(0).getLedgerCode());
-    assertEquals(":", fundCodeExpenseClassesCollectionReceived.getDelimiter());
-    assertEquals("ENDOW-SUBN:Elec", fundCodeExpenseClassesCollectionReceived.getFundCodeVsExpClassesTypes()
-      .get(0).getActiveFundCodeVsExpClasses().get(0));
+    vertxTestContext.assertComplete(future)
+      .onComplete(result -> {
+        assertTrue(result.succeeded());
+
+        var fundCodeExpenseClassesCollectionReceived = result.result();
+        assertEquals("ENDOW-SUBN", fundCodeExpenseClassesCollectionReceived.getFundCodeVsExpClassesTypes().get(0).getFundCode());
+        assertEquals("ONETIME", fundCodeExpenseClassesCollectionReceived.getFundCodeVsExpClassesTypes().get(0).getLedgerCode());
+        assertEquals(":", fundCodeExpenseClassesCollectionReceived.getDelimiter());
+        assertEquals("ENDOW-SUBN:Elec", fundCodeExpenseClassesCollectionReceived.getFundCodeVsExpClassesTypes().get(0).getActiveFundCodeVsExpClasses().get(0));
+        vertxTestContext.completeNow();
+      });
+
   }
 }
